--- a/public/style3.css
+++ b/public/style3.css
@@ -17,9 +17,16 @@ body {
      top: 0;
      left: 0;
      display: flex;
-     justify-content: flex-start;
-     align-items: center;
+     /* justify-content:space-evenly; */
+     /* align-items: space-evenly; */
 } 
+
+.outer-container{
+    display:flex;
+    align-items:space-evenly;
+    flex-direction:row;
+    /* width:50%; */
+}
 .logo{
     color: #c3073f;
     font-size: 2.5vw; /* Responsive font size */
@@ -78,7 +85,7 @@ form{
 
 .dropdown {
         position: fixed;
-        right: 480px;
+        right: 450px;
         display: flex; 
         align-items: center; 
         justify-content: space-between;
