added multiple pages

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -41,7 +41,7 @@
             <h3>Description of the event</h3>
            <input type="text" name="textbox5" placeholder="say anything about the event...." id="admin-textbox">
            <h3>Location of the event</h3>
-           <select id="citySelect">
+           <select id="citySelect" name="dropdown2">
             <option value="Alappuzha">Alappuzha</option>
             <option value="Thrissur">Thrissur</option>
             <option value="Palakkad">Palakkad</option>
