--- a/views/event-details.ejs
+++ b/views/event-details.ejs
@@ -1,12 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/style3.css">
+
 </head>
 <body>
     <header class="container-fluid d-flex justify-content-between align-items-center py-3">
@@ -68,8 +68,8 @@
             <button class="btn btn-outline-success" type="submit" id="go">Go</button>
             </form>
           </div>
-          <div class="d-flex align-items-center">
-            <a href="/" class="ms-3 text-decoration-none">Logout</a>
+          <div class="d-none d-lg-flex align-items-center">
+            <a href="#" class="ms-3 text-decoration-none">Logout</a>
             <div id="myNav" class="overlay">
               <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
               <div class="overlay-content">
@@ -82,51 +82,42 @@
             <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
          </div>
       </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
       <script>
-         $(document).ready(function() {
-        $('.box').click(function() {
-            // Get the current width of the search input field
-            var currentWidth = $('#searchInput').width();
-            
-            // Set the width of the search input field to its current width
-            // This stops the animation by overriding the CSS transition
-            $('#searchInput').css('width', currentWidth + 'px');
-        });
-    });
-        function openNav() {
-          document.getElementById("myNav").style.height = "100%";
-        }
-        
-        function closeNav() {
-          document.getElementById("myNav").style.height = "0%";
-        }
-        </script>
+        $(document).ready(function() {
+       $('.box').click(function() {
+           // Get the current width of the search input field
+           var currentWidth = $('#searchInput').width();
+           
+           // Set the width of the search input field to its current width
+           // This stops the animation by overriding the CSS transition
+           $('#searchInput').css('width', currentWidth + 'px');
+       });
+   });
+       function openNav() {
+         document.getElementById("myNav").style.height = "100%";
+       }
+       
+       function closeNav() {
+         document.getElementById("myNav").style.height = "0%";
+       }
+       </script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jY38PBHQiwNzxEh7xdsJBj9zIxq7Czs" crossorigin="anonymous"></script>
       <script src="https://kit.fontawesome.com/your-fontawesome-kit-code.js" crossorigin="anonymous"></script>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <div class="your-events">
-    <h1>Your events</h1>
-    </div>    
-    <% events.forEach(event => { %>
-    
-    <div class="card-container" id="event-card1">
-        <div class="event-card">
-            <img src="image1.png" alt="Event 1">
-            <h3 class="text"><%= event.textbox4 %></h3>
-            <p class="text">Date: <%= event.datePicker %></p>
-            <p class="text">Place: <%= event.textbox6 %></p><br>
-            <h4>Book Now</h4>
-        </div>
-    </div>
-
-    <% }); %>
-    <script>
-        document.getElementById('event-card1').addEventListener('click', function() {
-            window.location.href = '/event-details';
-        });
-    </script>
-    
 </body>
 </html>
