--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/style3.css">
 </head>
 <body class="body-home">
-  <header class="container-fluid d-flex justify-content-between align-items-center py-3">
+ <header class="container-fluid d-flex justify-content-between align-items-center py-3">
     <div class="d-flex align-items-center me-auto w-75">
         <a href="#" class="text-decoration-none d-flex align-items-center">
           <h1 class="me-5">crowwd</h1>
@@ -81,6 +81,28 @@
         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
      </div>
   </header>
+  <div class="image-ranking">
+    <ul class="event-list">
+      <div class="jumbotron">
+        <h1>Top Ranked Events</h1>
+        <p>Here are the top events based on ticket sales:</p>
+    
+        <ul>
+          <% rankedEvents.forEach(function(event) { %>
+            <li>
+              <strong><%= event.textbox4 %></strong>
+              <p>Email: <%= event.datePicker %></p>
+              <p>Total Tickets: <%= event.totalTickets %></p>
+              <p>Percentage Sold: <%= event.percentage.toFixed(2) %>%</p>
+            </li>
+          <% }); %>
+        </ul>
+     </div>
+     
+      
+    </ul>
+   </div>
+   
     
 
 
