--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/style.css">
+    <title>Login</title>
 </head>
-<body>
-
-        <h1 id="logo">crowwd</h1>
-
-    <div class="form-container">
-        <h2>LOGIN NOW</h2>
-        <form action="/login" method="post">
-          <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="text" id="email" name="email" placeholder="Enter your email" required autocomplete="off">
-          </div>
-          <div class="form-group">
-            <label for="password">password:</label>
-            <input type="password" id="password" name="password" placeholder="password" required>
-          </div>
-          <button type="submit" class="submit-btn">Login</button>
-        </form>
-        <p>Don't have an account? <a class="link" href="/register">register</a></p>
-      </div>
+<body class="body-login">
+  <main>
+    <div class="container-login" id="container-login">
+        <div class="form-container-login sign-in">
+            <form action="/login" method="post">
+                <h1>Sign In</h1>
+                <div class="social-icons">
+                    <a href="#" class="icon"><i class="fa-brands fa-instagram"></i></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
+                </div>
+                <span>use your admin/user email</span>
+                <input type="text" id="email" name="email" placeholder="Enter your email" required autocomplete="off">
+                <input type="password" id="password" name="password" placeholder="password" required>
+                <a href="/register" id="no-account" class="link">Don't have an account?</a>
+                <button type="submit">Sign In</button>
+                <% if (typeof errorMessage !== "undefined") { %>
+                  <div class="error-message">
+                     <%= errorMessage %>
+                  </div>
+                 <% } %>
+            </form>
+        </div>
+        <div class="toggle-container-login">
+            <div class="toggle-login">
+               
+                <h1 id="crowwd" >crowwd.................</h1>
+            </div>
+        </div>
+    </div>
+  </main>
     
+
+    <script src="script.js"></script>
+   
 </body>
+
 </html>
